# futrobotros

./: .gitignore  CMakeLists.txt  NOTES.txt  README.md  package.xml
launch/: simulated_team.launch  start_futrobot.launch  start_simulated.launch
msg/: BallVelocity.msg  Controls.msg  Poses.msg  RobotPWM.msg  State.msg  TeamBlocked.msg  TeamBypassControl.msg  TeamPWM.msg  TeamPose.msg
rviz/: futrobotros.rviz
src/: acquisition.cpp  acquisition.h  acquisition_node.cpp  campo.cpp  campo.h  control.cpp  control.h  control_node.cpp  dados_calibracao.cpp  dados_calibracao.h  data.h  field_visualization.cpp  functions.cpp  functions.h  futdata.cpp  futdata.h  localization_node.cpp  modelo.cpp  modelo.h  obstacle_avoidance_node.cpp  obstacles.cpp  obstacles.h  parameters.h  simulator_node.cpp  strategy.cpp  strategy.h  strategy_node.cpp  system.cpp  system.h  team_pose_to_tf.cpp  transmission_node.cpp
src/Imagem/: distradial.cpp  imagem.cpp  imagem.h
