<?xml version="1.0"?>
<package>
  <name>futrobotros</name>
  <version>0.0.0</version>
  <description>The futrobotros package</description>

  <maintainer email="ellonpaiva@gmail.com">Ellon P. Mendes</maintainer>
  <license>TODO</license>
  <url type="website">TODO</url>
  <author email="ellonpaiva@gmail.com">Ellon P. Mendes</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>